--- a/src/main/resources/templates/add-major.html
+++ b/src/main/resources/templates/add-major.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>School App</title>
 </head>
 
@@ -12,13 +13,14 @@
         <h3 class="title">New Major Form</h3>
         <div class="form-group">
             <form action="/create" method="post">
+                <input type="hidden" name="id" th:value="${major.id}">
                 <div class="form-control">
                     <label for="name">Name</label>
-                    <input type="text" name="name" id="name" required>
+                    <input type="text" name="name" id="name" th:value="${major.name}" required>
                 </div>
                 <div class="form-control">
                     <label for="description">Description</label>
-                    <textarea name="description" id="description" rows="10"></textarea>
+                    <textarea name="description" id="description" th:text="${major.description}" rows="10"></textarea>
                 </div>
                 <div class="action">
                     <button class="btn-create" type="submit">Create</button>
